--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -303,7 +303,7 @@ a:focus {
   padding: 2em;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1.25em;
+  font-size: 0.25em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -342,6 +342,34 @@ a:focus {
 }
 
 .grid figure h2,
+.grid figure p {
+  margin: 0;
+}
+
+.grid figure h4 {
+  word-spacing: -0.15em;
+  font-weight: 300;
+}
+
+.grid figure h4 span {
+  font-weight: 800;
+}
+
+.grid figure h4,
+.grid figure p {
+  margin: 0;
+}
+
+.grid figure h5 {
+  word-spacing: -0.15em;
+  font-weight: 300;
+}
+
+.grid figure h5 span {
+  font-weight: 800;
+}
+
+.grid figure h5,
 .grid figure p {
   margin: 0;
 }
@@ -411,6 +439,78 @@ figure.effect-honey h2 {
 figure.effect-honey:hover figcaption::before,
 figure.effect-honey:hover h2,
 figure.effect-honey:hover h2 i {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+/* h4 */
+
+figure.effect-honey h4 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1em 1.5em;
+  width: 100%;
+  text-align: left;
+  -webkit-transform: translate3d(0, -30px, 0);
+  transform: translate3d(0, -30px, 0);
+}
+
+figure.effect-honey h4 i {
+  font-style: normal;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0, -30px, 0);
+  transform: translate3d(0, -30px, 0);
+}
+
+figure.effect-honey figcaption::before,
+figure.effect-honey h4 {
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+}
+
+figure.effect-honey:hover figcaption::before,
+figure.effect-honey:hover h4,
+figure.effect-honey:hover h4 i {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+/* h5 */
+
+figure.effect-honey h5 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1em 1.5em;
+  width: 100%;
+  text-align: left;
+  -webkit-transform: translate3d(0, -30px, 0);
+  transform: translate3d(0, -30px, 0);
+}
+
+figure.effect-honey h5 i {
+  font-style: normal;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0, -30px, 0);
+  transform: translate3d(0, -30px, 0);
+}
+
+figure.effect-honey figcaption::before,
+figure.effect-honey h5 {
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+}
+
+figure.effect-honey:hover figcaption::before,
+figure.effect-honey:hover h5,
+figure.effect-honey:hover h5 i {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
